WebCore:

Bug 19085: font-family: initial sets font-family differently than font: initial

        <https://bugs.webkit.org/show_bug.cgi?id=19085>
        <rdar://problem/5939391>

        Reviewed by David Hyatt.

        Test: fast/css/font-family-initial.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty): Don't set family if first
        family of initial font description is empty.

LayoutTests:

        Bug 19085: font-family: initial sets font-family differently than font: initial

        <https://bugs.webkit.org/show_bug.cgi?id=19085>
        <rdar://problem/5939391>

        Reviewed by David Hyatt.

        * fast/css/font-family-initial-expected.txt: Added.
        * fast/css/font-family-initial.html: Added.



Canonical link: https://commits.webkit.org/26365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@33496 268f45cc-cd09-0410-ab3c-d52691b4dbfc